feat: download human and mouse Hallmark, KEGG, and GOBP
